objects/Liquid_Planner_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Liquid Planner / SF Integration settings</description>
    <fields>
        <fullName>API_URL__c</fullName>
        <label>API URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Liquid Planner Settings</label>
</CustomObject>